# binarized-neural-networks

./: .gitignore  README.md  getting_started_with_binary_connect.md  pyproject.toml
CNN/: accuracy.txt  cnn.keras  get_mnist_data.py  mnist_classifier.py  utilities.py
NN/: mnist_classifier.py
bnn/: binary_connect_cnn.py  binary_connect_fc.py  binary_connect_fc_example.py  binary_connect_fc_example_sophisticated.py  binary_connect_utils.py  gaussian_example.py  gaussian_step.py  python_bitcount.ipynb  softmax_regression.py
bnn/models/: bnn_cnn_epoch37_acc99.01.pt  bnn_cnn_epoch39_acc99.12.pt  bnn_fc_epoch35_acc98.08.pt
kmeans/: scan.ipynb
t-sne/: visualize.py
